K8s/Kustomize/base/sockshop/queue-master/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: queue-master
  # annotations:
  #   prometheus.io/scrape: 'true'
  labels:
    name: queue-master
spec:
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
  selector:
    app.kubernetes.io/name: queue-master
